--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
     <string name="app_name">Kueski Chagenge</string>
 
-    <string name="movies_title">Movies</string>"
+    <string name="movies">Movies</string>"
     <string name="error_get_data">Error getting information</string>
     <string name="something_went_wrong">Oops! Something went wrong</string>
     <string name="movies_load_error">We couldn\'t load the movies.\nPlease check your connection and try again.</string>
     <string name="movies_detail_load_error">We couldn\'t load the movie detail.\nPlease check your connection and try again.</string>
     <string name="default_error">Please check your connection and try again.</string>
     <string name="retry">Retry</string>
-
+    <string name="detail">Detail</string>"
+    <string name="duration">%d min</string>
 </resources>
