Rename applicationId of app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Kueski Chagenge</string>
+    <string name="app_name">Movies Chellenge</string>
 
     <string name="movies">Movies</string>"
     <string name="search">"Search"</string>
